--- a/scss/_Sezione1.scss
+++ b/scss/_Sezione1.scss
@@ -3,6 +3,7 @@
 @use "./functionModule"as function;
 @use "./inputModule"as input;
 @use "./buttons"as buttons;
+@use './darkMode' as darkmode;
 
 @mixin phishingclose {
 
@@ -38,6 +39,10 @@
     margin: 0;
     list-style-type: none;
     text-decoration: none;
+}
+
+#darkLogo{
+    display: none;
 }
 
 body {
@@ -121,8 +126,8 @@ body {
                 align-items: center;
                 width: 100%;
                 height: 56px;
-                background-color: rgb(39, 38, 44);
-                border-bottom: 1px solid rgb(56, 50, 65);
+                background-color: darkmode.$section1-nav-bg;
+                border-bottom: 1px solid darkmode.$section1-nav-border;
                 transform: translate3d(0px, 0px, 0px);
                 padding-left: 16px;
                 padding-right: 16px;
@@ -184,8 +189,8 @@ body {
                             }
 
                             &>.nav-left-inner-links-outer-block-link-dropdown {
-                                background-color: rgb(39, 38, 44);
-                                border: 1px solid rgb(56, 50, 65);
+                                background-color: darkmode.$section1-nav-bg;
+                                border: 1px solid darkmode.$section1-nav-border;
                                 border-radius: 16px;
                                 padding-bottom: 4px;
                                 padding-top: 4px;
@@ -303,7 +308,7 @@ body {
                                 left: -150%;
                                 top: 40px;
                                 bottom: auto;
-                                background-color: rgb(39, 38, 44);
+                                background-color: darkmode.$section1-nav-bg;
                                 box-shadow: rgba(25, 19, 38, 0.1) 0px 2px 12px -8px,
                                     rgba(25, 19, 38, 0.05) 0px 1px 1px;
                                 padding: 16px;
@@ -334,9 +339,9 @@ body {
                                     height: 48px;
                                     padding: 0px 24px;
                                     background-color: transparent;
-                                    color: rgb(31, 199, 212);
+                                    // color: rgb(31, 199, 212);
                                     box-shadow: none;
-                                    color: rgb(244, 238, 255);
+                                    color: darkmode.$section6-text;
                                     padding: 0px 8px;
                                     border-radius: 8px;
                                 }
@@ -412,9 +417,7 @@ body {
         }
 
         &>main {
-            background: radial-gradient(103.12% 50% at 50% 50%,
-                    rgb(33, 25, 58) 0%,
-                    rgb(25, 19, 38) 100%);
+            background: darkmode.$section1-main-bg;
             padding: function.convertpx(48px) 0 function.convertpx(70px) 0;
             display: flex;
             flex-direction: column;
@@ -573,7 +576,7 @@ body {
 
                         &>h2:last-of-type {
                             line-height: 1.1;
-                            color: rgb(244, 238, 255);
+                            color: darkmode.$section6-text;
                             font-size: function.convertpx(20px);
                             font-weight: font.$fontHeavyWeight;
                         }
@@ -789,6 +792,7 @@ body {
     }
     .settings{
         height: 100% !important;
+
         
     }
     .hIAkVp{
@@ -905,7 +909,7 @@ body {
  
   .iZtpYs { 
       align-items: center; 
-      background: transparent; 
+      background: darkmode.$section1-wallet-bg; 
       border-bottom: 1px solid rgb(56, 50, 65); 
       display: flex; 
       padding: 12px 24px;
@@ -913,7 +917,7 @@ body {
   
   @media screen and (min-width: 852px){ 
     .iZtpYs { 
-      background: linear-gradient(139.73deg, rgb(49, 61, 92) 0%, rgb(61, 42, 84) 100%);
+    background:darkmode.$section1-wallet-bg;
     } 
   }     
   
@@ -971,6 +975,14 @@ body {
       color: rgb(31, 199, 212); 
       box-shadow: none;
   } 
+
+  .fxrqCO{
+    color: darkmode.$section6-text !important;
+  }
+
+  .cLxufJ{
+    background: darkmode.$section1-wallet-bottomBG;
+  }
   
   .jodCDD { 
       padding: 0px; 
@@ -1125,7 +1137,7 @@ body {
   } 
   
   .fHiGVA { 
-      color: rgb(244, 238, 255); 
+      color: darkmode.$section6-text; 
       font-weight: 400; 
       line-height: 1.5; 
       font-size: 14px;
@@ -1351,7 +1363,7 @@ body {
   } 
   
   .bXycjW { 
-      color: rgb(244, 238, 255); 
+      color: darkmode.$section6-text; 
       font-weight: 400; 
       line-height: 1.5; 
       font-size: 16px;
@@ -1377,7 +1389,7 @@ body {
   
   .enaAag { 
       align-items: center; 
-      background-color: rgb(55, 47, 71); 
+      background-color: darkmode.$section1-button-bg; 
       border-radius: 24px; 
       box-shadow: rgba(74, 74, 104, 0.1) 0px 2px 2px -1px inset; 
       cursor: pointer; 
@@ -1407,7 +1419,7 @@ body {
   } 
   
   .bqyozG { 
-      background-color: rgb(39, 38, 44); 
+      background-color: darkmode.$section1-nav-bg; 
       border-radius: 50%; 
       cursor: pointer; 
       height: 26px; 
@@ -1481,7 +1493,7 @@ body {
       transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s; 
       height: 32px; 
       padding: 0px 16px; 
-      background-color: rgb(53, 53, 71); 
+      background-color: darkmode.$section1-settings-button; 
       box-shadow: none; 
       color: rgb(31, 199, 212); 
       margin-top: 4px; 
@@ -1506,7 +1518,7 @@ body {
       transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s; 
       height: 32px; 
       padding: 0px 16px; 
-      background-color: rgb(53, 53, 71); 
+      background-color: darkmode.$section1-settings-button;;
       box-shadow: none; 
       color: rgb(31, 199, 212); 
       margin-right: 4px; 
