--- a/scss/_Sezione6.scss
+++ b/scss/_Sezione6.scss
@@ -10,10 +10,12 @@
 
 @use './cards' as card;
 
+@use './darkMode' as darkmode;
+
 .sezione6-wrapper{
     position: relative;
     z-index: 50;
-    background-color: black;
+    background-color: darkmode.$section6-bg;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,12 +27,13 @@
 }
 
 .sezione6 {
-    background-color: black;
+    background-color: darkmode.$section6-bg;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: auto;
+    margin-top: -1px;
     height: 100%;
     max-height:  750px;
     width: 100%;
@@ -49,7 +52,7 @@
 
     .textblocco1 {
         width: 35%;
-        color: #f4eeff;
+        color: darkmode.$section6-text;
         font-size: 2rem;
 
         span {
@@ -73,18 +76,6 @@
 
             button {
                 @include buttons.button;
-                // padding-top: 15px;
-                // border-radius: 16px;
-                // background-color: #1fc7d4;
-                // color: #ffffff;
-                // height: 100%;
-                // width: 25%;
-                // display: flex;
-                // justify-content: center;
-                // box-shadow: rgb(14 14 44 / 40%) 0px -1px 0px 0px inset;
-                // opacity: 1;
-                // letter-spacing: 0.03em;
-
                 p {
                     font-size: 16px;
                     font-weight: 600;
@@ -195,7 +186,7 @@
 
     p {
         font-size: 24px;
-        color: #f4eeff;
+        color: darkmode.$section6-text;
         font-weight: 800;
     }
 
