--- a/scss/_Sezione7.scss
+++ b/scss/_Sezione7.scss
@@ -10,6 +10,8 @@
 
 @use './cards' as card;
 
+@use './darkMode' as darkmode;
+
 * {
     margin: 0;
     padding: 0;
@@ -21,12 +23,12 @@
     width: 8px;
 }
 ::-webkit-scrollbar-thumb {
-    background: rgb(184, 173, 210);
+    background: darkmode.$scrollbar-thumb;
     border-radius: 8px;
 }
 ::-webkit-scrollbar-track {
-    box-shadow: rgb(55 47 71) 0px 0px 5px inset;
-    background: color.$mainBlack;
+    box-shadow: darkmode.$scrollbar-shadow 0px 0px 5px inset;
+    background: darkmode.$scrollbar-track;
 }
 
 body{
