--- a/scss/_Sezione6.scss
+++ b/scss/_Sezione6.scss
@@ -37,21 +37,22 @@
     height: 100%;
     max-height:  750px;
     width: 100%;
+    max-width: 55rem;
 }
 
 .blocco1flex {
 
     display: flex;
-    justify-content: space-evenly;
+    
     align-items: center;
     width: 100%;
     height: 70%;
-    max-width: 1100px;
+    max-width: 900px;
     margin-bottom: 30px;
 
 
     .textblocco1 {
-        width: 35%;
+        width: 65%;
         color: darkmode.$section6-text;
         font-size: 2rem;
 
@@ -109,7 +110,6 @@
 .imgBounce {
     
     height: 100%;
-    width: 50%;
     display: flex;
     picture{
     height: 100%;
@@ -127,7 +127,7 @@
         max-height: 100%;
         width: auto;
         height: auto;
-        position: absolute;
+        position: relative;
         z-index: 1;
         top: 0;
 
@@ -140,8 +140,6 @@
         height: auto;
         width: fit-content;
         position: absolute;
-        top: -30px;
-        left: 0;
         z-index: 2;
     }
 
@@ -150,10 +148,8 @@
         max-height: 100%;
         width: auto;
         height: auto;
-        width: fit-content;
         position: absolute;
-        top: -25;
-        right: 0;
+        width: fit-content;
     }
 
     #top-right {
@@ -163,8 +159,7 @@
         height: auto;
         width: fit-content;
         position: absolute;
-        top: 0;
-        left: 0;
+        left: 30px;
     }
    
     }
@@ -177,9 +172,8 @@
     max-width: 1200px;
     width: 100%;
     height: 30%;
-    text-align: center;
     display: grid;
-    gap: 30px;
+    gap: 30px 0;
     grid-template-columns: repeat(3, auto);
     grid-template-areas: "quadro1, quadro2, quadro3"
         "quadro4, quadro5, quadro6";
@@ -203,7 +197,7 @@
 .quadro6 {
     border-left: 1px rgb(38, 33, 48) solid;
     height: 50%;
-    padding-left: 15px;
+    
 }
 
 ///RESPONSIVE
@@ -211,45 +205,61 @@
     body {
         min-height: 100vh !important;
     }
-
+    .sezione6-wrapper{
+        max-height: fit-content;
+    }
     .sezione6 {
-        padding: 0;
+        padding: 20px;
+        padding-top: 100px !important;
         margin-right: 30px !important;
+
+        gap: 60px;
     }
 
     div.blocco1flex {
         width: 100% !important;
         display: flex;
         flex-direction: column !important;
-        padding: 0 50px;
+        
 
     }
 
     .blocco2grid {
-        padding: 30px 50px;
+       
         width: 100%;
         height: 100%;
         flex: 1;
         display: grid;
-        gap: 30px;
+        justify-content: flex-start;
+        
+        margin: 0;
         grid-template-columns: repeat(2, auto);
         grid-template-areas: "quadro1 ,quadro2"
             "quadro3, quadro4"
             "quadro5 ,quadro6";
+            &>div{
+                text-align: left;
+                height: fit-content;
+                width: 50vw;
+                
+                align-self: flex-start;
+                
+            }
+        
     }
 
     .imgBounce {
-        max-height: 500px !important;
-        max-width: 500px !important;
+        
+        max-width: 250px !important;
         height: 100%;
         width: 100%;
         display: flex;
         align-self: flex-end;
         flex-wrap: wrap;
+        margin: 0 20px;
         order: 1;
-        padding-bottom: 30px;
 
-        figure {
+        picture {
             padding-left: 50px;
             padding-bottom: 20px;
 
@@ -263,24 +273,25 @@
             #top-left {
                 width: 200px;
                 position: absolute;
-                top: 210px;
-                left: 100px;
+                top: 0;
+                left: 36px;
+
                 z-index: 2;
             }
 
             #bottom-right {
                 width: 200px;
                 position: absolute;
-                top: 240px;
-                left: 120px;
+                bottom: 45px;
+              
 
             }
 
             #top-right {
                 width: 200px;
                 position: absolute;
-                top: 230px;
-                left: 90px;
+                left: 20px;
+               
             }
 
         }
