--- a/scss/style.css
+++ b/scss/style.css
@@ -2524,19 +2524,19 @@ html {
   height: 100%;
   max-height: 750px;
   width: 100%;
+  max-width: 55rem;
 }
 
 .blocco1flex {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   height: 70%;
-  max-width: 1100px;
+  max-width: 900px;
   margin-bottom: 30px;
 }
 .blocco1flex .textblocco1 {
-  width: 35%;
+  width: 65%;
   color: var(--section6-text);
   font-size: 2rem;
 }
@@ -2598,7 +2598,6 @@ html {
 
 .imgBounce {
   height: 100%;
-  width: 50%;
   display: flex;
 }
 .imgBounce picture {
@@ -2616,7 +2615,7 @@ html {
   max-height: 100%;
   width: auto;
   height: auto;
-  position: absolute;
+  position: relative;
   z-index: 1;
   top: 0;
 }
@@ -2629,8 +2628,6 @@ html {
   width: -moz-fit-content;
   width: fit-content;
   position: absolute;
-  top: -30px;
-  left: 0;
   z-index: 2;
 }
 .imgBounce picture #bottom-right {
@@ -2638,12 +2635,10 @@ html {
   max-height: 100%;
   width: auto;
   height: auto;
+  position: absolute;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  position: absolute;
-  top: -25;
-  right: 0;
 }
 .imgBounce picture #top-right {
   max-width: 90%;
@@ -2654,17 +2649,15 @@ html {
   width: -moz-fit-content;
   width: fit-content;
   position: absolute;
-  top: 0;
-  left: 0;
+  left: 30px;
 }
 
 .blocco2grid {
   max-width: 1200px;
   width: 100%;
   height: 30%;
-  text-align: center;
   display: grid;
-  gap: 30px;
+  gap: 30px 0;
   grid-template-columns: repeat(3, auto);
   grid-template-areas: "quadro1, quadro2, quadro3" "quadro4, quadro5, quadro6";
 }
@@ -2684,71 +2677,81 @@ html {
 .quadro6 {
   border-left: 1px rgb(38, 33, 48) solid;
   height: 50%;
-  padding-left: 15px;
 }
 
 @media screen and (max-width: 852px) {
   body {
     min-height: 100vh !important;
   }
+  .sezione6-wrapper {
+    max-height: -webkit-fit-content;
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+  }
   .sezione6 {
-    padding: 0;
+    padding: 20px;
+    padding-top: 100px !important;
     margin-right: 30px !important;
+    gap: 60px;
   }
   div.blocco1flex {
     width: 100% !important;
     display: flex;
     flex-direction: column !important;
-    padding: 0 50px;
   }
   .blocco2grid {
-    padding: 30px 50px;
     width: 100%;
     height: 100%;
     flex: 1;
     display: grid;
-    gap: 30px;
+    justify-content: flex-start;
+    margin: 0;
     grid-template-columns: repeat(2, auto);
     grid-template-areas: "quadro1 ,quadro2" "quadro3, quadro4" "quadro5 ,quadro6";
   }
+  .blocco2grid > div {
+    text-align: left;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: 50vw;
+    align-self: flex-start;
+  }
   .imgBounce {
-    max-height: 500px !important;
-    max-width: 500px !important;
+    max-width: 250px !important;
     height: 100%;
     width: 100%;
     display: flex;
     align-self: flex-end;
     flex-wrap: wrap;
+    margin: 0 20px;
     order: 1;
-    padding-bottom: 30px;
   }
-  .imgBounce figure {
+  .imgBounce picture {
     padding-left: 50px;
     padding-bottom: 20px;
   }
-  .imgBounce figure #main-img {
+  .imgBounce picture #main-img {
     width: 200px;
     position: relative;
     z-index: 1;
   }
-  .imgBounce figure #top-left {
+  .imgBounce picture #top-left {
     width: 200px;
     position: absolute;
-    top: 210px;
-    left: 100px;
+    top: 0;
+    left: 36px;
     z-index: 2;
   }
-  .imgBounce figure #bottom-right {
+  .imgBounce picture #bottom-right {
     width: 200px;
     position: absolute;
-    top: 240px;
-    left: 120px;
+    bottom: 45px;
   }
-  .imgBounce figure #top-right {
+  .imgBounce picture #top-right {
     width: 200px;
     position: absolute;
-    top: 230px;
-    left: 90px;
+    left: 20px;
   }
   .textblocco1 {
     width: 100% !important;
