--- a/scss/_Sezione6.scss
+++ b/scss/_Sezione6.scss
@@ -24,6 +24,8 @@
     height: 100%;
     max-height:  750px;
     width: 100%;
+    margin-top: -1px;
+    margin-bottom: -1px;
 }
 
 .sezione6 {
@@ -33,9 +35,9 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    margin-top: -1px;
-    height: 100%;
-    max-height:  750px;
+    // margin-top: -1px;
+    height: fit-content;
+    // max-height:  750px;
     width: 100%;
     max-width: 55rem;
 }
@@ -210,7 +212,7 @@
     }
     .sezione6 {
         padding: 20px;
-        padding-top: 100px !important;
+        padding-top: 30px !important;
         margin-right: 30px !important;
 
         gap: 60px;
