--- a/scss/_Sezione1.scss
+++ b/scss/_Sezione1.scss
@@ -1214,6 +1214,7 @@ body {
       align-items: center; 
       background: transparent; 
       border-bottom: 1px solid rgb(56, 50, 65); 
+      background: darkmode.$section1-settings-button;
       display: flex; 
       padding: 12px 24px;
   } 
@@ -1221,6 +1222,7 @@ body {
   @media screen and (min-width: 852px){ 
     .eHwgEU { 
       background: linear-gradient(166.77deg, rgb(59, 65, 85) 0%, rgb(58, 48, 69) 100%);
+      background: darkmode.$section1-settings-button
     } 
   }     
   
@@ -1499,7 +1501,7 @@ body {
       margin-top: 4px; 
       margin-right: 4px;
   } 
-  
+
   .bmPNCL { 
       position: relative; 
       align-items: center; 
@@ -1560,6 +1562,46 @@ body {
       filter: none !important;
   } 
   
+  .topSide{
+    &:hover{
+        div.slider{
+        outline: function.convertpx(3px) solid #7050af;
+            }
+        }
+        position: relative;
+    cursor: pointer;
+    background-color: #666171;
+    width: function.convertpx(60px);
+    height: function.convertpx(30px);
+    border-radius: function.convertpx(16px);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    div.slider{
+        width: function.convertpx(30px);
+        height: function.convertpx(30px);
+        border-radius: 50%;
+        background-color: #27262c;
+        position: absolute;
+        transform: translate(50%) scale(0.85);
+        margin: 0%;
+        }
+    div{
+        margin-top: function.convertpx(3px);
+            &.nightMode{
+                img{
+                    margin-left: function.convertpx(2px);
+                    filter: invert(33%) sepia(87%) saturate(483%) hue-rotate(219deg) brightness(87%) contrast(86%);
+                }
+            }
+            &.lightMode{
+                img{
+                margin-left: function.convertpx(2px);
+                filter: invert(12%) sepia(3%) saturate(1947%) hue-rotate(210deg) brightness(94%) contrast(90%);                                            
+            }
+            }  
+    }
+}
   
   
   
